# NFD2C-macOS

./: README.md
rust_api/: Cargo.toml
rust_api/src/: lib.rs  processor.rs
swift_ui/nfd2c/: AppDelegate.swift  BridgingHeader.h  DirectoryViewModel .swift  Localizable.xcstrings  RDirectoryObserver.swift  Utils.swift  nfd2cApp.swift
swift_ui/nfd2c.xcodeproj/: project.pbxproj
swift_ui/nfd2c.xcodeproj/xcshareddata/xcschemes/: nfd2c.xcscheme
swift_ui/nfd2c/Views/: ChangesView.swift  ContentView.swift  DirectoryItemView.swift  FooterView.swift  HeaderView.swift  MonitorView.swift
swift_ui/nfd2cTests/: nfd2cTests.swift
swift_ui/nfd2cUITests/: nfd2cUITests.swift  nfd2cUITestsLaunchTests.swift
