[package]
name = "nfd2c-macOS"
version = "0.1.0"
edition = "2021"
description = "Converts NFD-formatted file names to NFC format"
license = "MIT"

[lib]
name = "nfd2c"
crate-type = ["staticlib", "cdylib"]

[dependencies]
unicode-normalization = "0.1"
clap = { version = "4.5.19", features = ["derive"] }
walkdir = "2.5"
