[package]
name = "nfd2c-macOS"
version = "0.2.0"
edition = "2021"
description = "Converts NFD-formatted file names to NFC format"
license = "MIT"

[lib]
name = "nfd2c"
crate-type = ["staticlib", "cdylib"]

[package.metadata.cargo-lipo]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]  # macOS ARM and Intel

[dependencies]
unicode-normalization = "0.1"
clap = { version = "4.5.19", features = ["derive"] }
walkdir = "2.5"
